--- a/.github/workflows/frontend_chacowild.yml
+++ b/.github/workflows/frontend_chacowild.yml
@@ -15,7 +15,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-
+      
+      - name: Add to Path
+        run: |
+          echo "$FRONTEND/startup-nextjs-main" >> $GITHUB_PATH
+      
       - name: Set up Node.js version
         uses: actions/setup-node@v3
         with:
