--- a/FRONTEND/startup-nextjs-main/package.json
+++ b/FRONTEND/startup-nextjs-main/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "axios": "^1.6.8",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.1.0",
     "next": "^14.2.1",
@@ -18,6 +19,7 @@
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.1.0",
     "react-modal-video": "^2.0.1",
     "tailwind-merge": "^2.2.2"
   },
